--- a/src/manifest-firefox.json
+++ b/src/manifest-firefox.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
 
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
@@ -9,24 +9,26 @@
   "author": "Eric Jung",
 
   "icons": {
-    "16": "image/icon.png",
-    "32": "image/icon32.png",
-    "48": "image/icon48.png",
-    "128": "image/icon128.png"
+    "16": "image/icon.svg",
+    "32": "image/icon.svg",
+    "48": "image/icon.svg",
+    "64": "image/icon.svg",
+    "128": "image/icon.svg"
   },
 
   "background": {
-    "service_worker": "content/background.js",
-    "type": "module"
+    "page": "content/background.html"
   },
 
   "options_ui": {
+    "browser_style": true,
     "open_in_tab": true,
     "page": "content/options.html"
   },
 
-  "action": {
-    "default_icon": "image/icon.png",
+  "browser_action": {
+    "browser_style": true,
+    "default_icon": "image/icon.svg",
     "default_popup": "content/popup.html",
     "default_title": "__MSG_extensionName__"
   },
@@ -39,16 +41,18 @@
     "proxy",
     "storage",
     "webRequest",
-    "webRequestAuthProvider"
+    "webRequestBlocking",
+    "<all_urls>"
   ],
 
   "optional_permissions": [
     "privacy"
   ],
 
-  "host_permissions": [
-    "<all_urls>"
-  ],
-
-  "minimum_chrome_version": "108"
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "foxyproxy-beta@eric.h.jung",
+      "strict_min_version": "74.0"
+    }
+  }
 }
