--- a/src/manifest-chrome-basic.json
+++ b/src/manifest-chrome-basic.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
 
-  "name": "__MSG_extensionName__",
+  "name": "FoxyProxy Basic",
   "description": "__MSG_extensionDescription__",
   "version": "8.0",
   "default_locale": "en",
