--- a/src/manifest-chrome.json
+++ b/src/manifest-chrome.json
@@ -53,5 +53,29 @@
     "<all_urls>"
   ],
 
+  "commands": {
+    "proxyByPatterns": {
+      "description": "__MSG_proxyByPatterns__"
+    },
+    "disable": {
+      "description": "__MSG_disable__"
+    },
+    "setProxy": {
+      "description": "__MSG_setProxy__"
+    },
+    "quickAdd": {
+      "description": "__MSG_quickAdd__"
+    },
+    "excludeHost": {
+      "description": "__MSG_excludeHost__"
+    },
+    "setTabProxy": {
+      "description": "__MSG_setTabProxy__"
+    },
+    "unsetTabProxy": {
+      "description": "__MSG_unsetTabProxy__"
+    }
+  },
+
   "minimum_chrome_version": "108"
 }
