--- a/src/manifest-firefox-basic.json
+++ b/src/manifest-firefox-basic.json
@@ -55,10 +55,37 @@
     "privacy"
   ],
 
+  "commands": {
+    "proxyByPatterns": {
+      "description": "__MSG_proxyByPatterns__"
+    },
+    "disable": {
+      "description": "__MSG_disable__"
+    },
+    "setProxy": {
+      "description": "__MSG_setProxy__"
+    },
+    "quickAdd": {
+      "description": "__MSG_quickAdd__"
+    },
+    "excludeHost": {
+      "description": "__MSG_excludeHost__"
+    },
+    "setTabProxy": {
+      "description": "__MSG_setTabProxy__"
+    },
+    "unsetTabProxy": {
+      "description": "__MSG_unsetTabProxy__"
+    }
+  },
+
   "browser_specific_settings": {
     "gecko": {
       "id": "foxyproxy-basic@eric.h.jung",
       "strict_min_version": "93.0"
+    },
+    "gecko_android": {
+      "strict_min_version": "113.0"
     }
   }
 }
