Changed added extension to extension-id
This will eliminate corrupting the config of the old version,
and allow to install both at same time for testing.

Signed-off-by: TriMoon (GitHub) <TriMoon@users.noreply.github.com>

--- a/src/manifest-firefox.json
+++ b/src/manifest-firefox.json
@@ -81,7 +81,7 @@
 
   "browser_specific_settings": {
     "gecko": {
-      "id": "foxyproxy@eric.h.jung",
+      "id": "foxyproxy-extension@eric.h.jung",
       "strict_min_version": "93.0"
     },
     "gecko_android": {
