--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "browser-extension",
   "devDependencies": {
-    "grunt": "^1.6.1",
-    "grunt-contrib-compress": "^2.0.0"
+    "grunt": "1.6.1",
+    "grunt-cli": "^1.4.3",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-compress": "2.0.0"
   }
 }
