--- a/src/manifest-firefox-basic.json
+++ b/src/manifest-firefox-basic.json
@@ -1,9 +1,9 @@
 {
   "manifest_version": 2,
 
-  "name": "FoxyProxy Basic",
+  "name": "__MSG_extensionNameBasic__",
   "description": "__MSG_extensionDescription__",
-  "version": "8.1",
+  "version": "8.2",
   "default_locale": "en",
   "homepage_url": "https://getfoxyproxy.org/",
   "author": "Eric Jung",
