--- a/src/manifest-chrome.json
+++ b/src/manifest-chrome.json
@@ -3,7 +3,7 @@
 
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "8.10",
+  "version": "8.11",
   "default_locale": "en",
   "homepage_url": "https://getfoxyproxy.org/",
   "author": "Eric Jung",
@@ -35,6 +35,7 @@
   },
 
   "permissions": [
+    "contextMenus",
     "downloads",
     "notifications",
     "proxy",
@@ -63,8 +64,8 @@
     "setProxy": {
       "description": "__MSG_setProxy__"
     },
-    "quickAdd": {
-      "description": "__MSG_quickAdd__"
+    "includeHost": {
+      "description": "__MSG_includeHost__"
     },
     "excludeHost": {
       "description": "__MSG_excludeHost__"
