--- a/src/manifest-firefox.json
+++ b/src/manifest-firefox.json
@@ -3,7 +3,7 @@
 
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "8.10",
+  "version": "8.11",
   "default_locale": "en",
   "homepage_url": "https://getfoxyproxy.org/",
   "author": "Eric Jung",
@@ -12,7 +12,6 @@
     "16": "image/icon.svg",
     "32": "image/icon.svg",
     "48": "image/icon.svg",
-    "64": "image/icon.svg",
     "128": "image/icon.svg"
   },
 
@@ -35,6 +34,7 @@
 
   "permissions": [
     "downloads",
+    "menus",
     "notifications",
     "proxy",
     "storage",
@@ -59,8 +59,8 @@
     "setProxy": {
       "description": "__MSG_setProxy__"
     },
-    "quickAdd": {
-      "description": "__MSG_quickAdd__"
+    "includeHost": {
+      "description": "__MSG_includeHost__"
     },
     "excludeHost": {
       "description": "__MSG_excludeHost__"
