--- a/src/manifest-basic.json
+++ b/src/manifest-basic.json
@@ -87,7 +87,7 @@
 
   "browser_specific_settings": {
     "gecko": {
-      "id": "foxyproxy@eric.h.jung",
+      "id": "foxyproxy-basic@eric.h.jung",
       "strict_min_version": "128.0"
     },
     "gecko_android": {
